tests/snapshots/enums__simple__ls-targets_es-minwin.snap
---
source: tests/enums.rs
expression: bo.bindings
---
#![allow(non_snake_case, non_upper_case_globals, non_camel_case_types)]
pub mod GENERIC_ACCESS_RIGHTS {
    pub type Enum = u32;
    pub const GENERIC_ALL: Enum = 268435456;
    pub const GENERIC_WRITE: Enum = 1073741824;
    pub const GENERIC_READ: Enum = 2147483648;
}

